# task-11-3-cpp

./: CMakeLists.txt  dinamicLibCMake.sln
ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
dinamicLibCMake/: Leaver.cpp  Leaver.h  dinamicLibCMake.vcxproj
dinamicLibCMake/new/: proba.sln  proba.vcxproj
